Avoid winagent and server target overlap in the STRIP target of Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -801,7 +801,9 @@ $(SELINUX_MODULE): $(SELINUX_ENFORCEMENT)
 ifeq (${TARGET}, agent)
 strip: ${BUILD_AGENT} ${BUILD_CMAKE_PROJECTS}
 else
+ifneq (${TARGET}, winagent)
 strip: ${BUILD_SERVER} ${BUILD_CMAKE_PROJECTS}
+endif
 endif
 ifeq (${uname_S}, Linux)
 ifneq (${TARGET}, winagent)
