Remove __init__ binary

--- a/framework/Makefile
+++ b/framework/Makefile
@@ -48,6 +48,7 @@ install:
 #   Provisional name change for wazuh-logtest and wazuh-clusterd
 	$(MV_FILE) $(INSTALLDIR)/bin/wazuh_logtest $(INSTALLDIR)/bin/wazuh-logtest
 	$(MV_FILE) $(INSTALLDIR)/bin/wazuh_clusterd $(INSTALLDIR)/bin/wazuh-clusterd
+	$(RM_FILE) $(INSTALLDIR)/bin/__init__
 
 examples: install
 	$(INSTALL_DIR) $(INSTALLDIR)/framework/examples
