--- a/api/test/integration/test_overview_endpoints.tavern.yaml
+++ b/api/test/integration/test_overview_endpoints.tavern.yaml
@@ -41,11 +41,16 @@ stages:
                platform: !anystr
                version: !anystr
          agent_status:
-           active: 8
-           disconnected: 2
-           never_connected: 2
-           pending: 0
-           total: 12
+           connection:
+             active: 8 
+             disconnected: 2
+             never_connected: 2
+             pending: 0
+             total: 12
+           configuration:
+             synced: 8
+             not_synced: 4
+             total: 12
          agent_version: !anything
          groups:
            - configSum: !anystr
