--- a/api/test/integration/test_rbac_white_overview_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_white_overview_endpoints.tavern.yaml
@@ -41,11 +41,16 @@ stages:
                platform: !anystr
                version: !anystr
          agent_status:
-           active: 4
-           disconnected: 1
-           never_connected: 1
-           pending: 0
-           total: 6
+           connection:
+             active: 4
+             disconnected: 1
+             never_connected: 1
+             pending: 0
+             total: 6
+           configuration:
+             synced: 4
+             not_synced: 2
+             total: 6
          agent_version: !anything # This will be tested with an external function
          groups: []
          last_registered_agent:
