Fixed syscheck daemon library linking on Solaris

--- a/src/syscheckd/CMakeLists.txt
+++ b/src/syscheckd/CMakeLists.txt
@@ -94,7 +94,8 @@ if (UNIX)
             if (CMAKE_SYSTEM_VERSION STRGREATER "5.10")
                 string(APPEND CMAKE_EXE_LINKER_FLAGS " -z relax=secadj")
             endif(CMAKE_SYSTEM_VERSION STRGREATER "5.10")
-        elseif(CMAKE_SYSTEM_NAME STREQUAL "AIX")
+        endif(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
+        if(CMAKE_SYSTEM_NAME STREQUAL "AIX")
             string(REPLACE ";" ":" CXX_IMPLICIT_LINK_DIRECTORIES_STR "${CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES}")
             string(REPLACE ";" ":" PLATFORM_REQUIRED_RUNTIME_PATH_STR "${CMAKE_PLATFORM_REQUIRED_RUNTIME_PATH}")
             target_link_libraries(wazuh-syscheckd -Wl,-blibpath:${INSTALL_PREFIX}/lib:${CXX_IMPLICIT_LINK_DIRECTORIES_STR}:${PLATFORM_REQUIRED_RUNTIME_PATH_STR})
@@ -102,7 +103,7 @@ if (UNIX)
             # Do nothing for HP-UX
         else()
             string(APPEND CMAKE_EXE_LINKER_FLAGS " -Wl,-rpath,$ORIGIN/../lib")
-        endif(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
+        endif(CMAKE_SYSTEM_NAME STREQUAL "AIX")
     else()
         string(APPEND CMAKE_EXE_LINKER_FLAGS " -Wl,-rpath,@executable_path/../lib")
     endif(NOT APPLE)
