--- a/src/unit_tests/os_crypto/CMakeLists.txt
+++ b/src/unit_tests/os_crypto/CMakeLists.txt
@@ -14,4 +14,5 @@ if(${TARGET} STREQUAL "server")
     add_subdirectory(md5)
     add_subdirectory(md5_sha1)
     add_subdirectory(md5_sha1_sha256)
+    add_subdirectory(sha256)
 endif()
