--- a/src/syscheckd/src/db/CMakeLists.txt
+++ b/src/syscheckd/src/db/CMakeLists.txt
@@ -45,6 +45,9 @@ elseif(UNIX AND NOT APPLE)
   if(CMAKE_SYSTEM STREQUAL "SunOS-5.10")
     set_target_properties(fimdb PROPERTIES
       LINK_FLAGS "-static-libstdc++")
+  elseif(CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
+    set_target_properties(fimdb PROPERTIES
+      LINK_FLAGS "-static-libgcc")
   else()
     set_target_properties(fimdb PROPERTIES
       LINK_FLAGS "-static-libgcc -static-libstdc++")
