Refactored conditional builders to return a function, lifter is returned only by opConditionBuilder now

--- a/src/engine/test/source/builder/CMakeLists.txt
+++ b/src/engine/test/source/builder/CMakeLists.txt
@@ -30,7 +30,7 @@ include_directories(
 )
 
 #TODO do this better
-link_libraries(gtest engine_test_main hlp kvdb builders)
+link_libraries(gtest engine_test_main hlp kvdb builders logicExpression)
 
 ####################################################################################################
 # Builder targets
@@ -96,6 +96,8 @@ add_executable(stageBuilderTest
   ${BUILDER_BUILDERS_TEST_SOURCE_DIR}/stageBuilderCheck_test.cpp
   ${BUILDER_BUILDERS_TEST_SOURCE_DIR}/stageBuilderNormalize_test.cpp
   ${BUILDER_BUILDERS_TEST_SOURCE_DIR}/stageBuilderOutputs_test.cpp
+  ${BUILDER_BUILDERS_TEST_SOURCE_DIR}/stageBuilderExpressionCheck_test.cpp
+  ${ENGINE_SOURCE_DIR}/builder/builders/stageBuilderExpressionCheck.cpp
 )
 gtest_discover_tests(stageBuilderTest)
 
