--- a/src/syscheckd/src/db/CMakeLists.txt
+++ b/src/syscheckd/src/db/CMakeLists.txt
@@ -14,7 +14,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
   link_directories(${INSTALL_PREFIX}/lib)
   add_definitions(-DPROMISE_TYPE=PromiseType::SLEEP)
 else()
-  add_definitions(-DPROMISE_TYPE=PromiseType::NORMAL
+  add_definitions(-DPROMISE_TYPE=PromiseType::NORMAL)
 endif(CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
 
 file(GLOB DB_SRC
