--- a/src/data_provider/CMakeLists.txt
+++ b/src/data_provider/CMakeLists.txt
@@ -149,8 +149,7 @@ elseif(UNIX AND NOT APPLE)
     set_target_properties(sysinfo PROPERTIES
       LINK_FLAGS "-static-libstdc++")
   elseif(CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
-    set_target_properties(sysinfo PROPERTIES
-      LINK_FLAGS "-static-libgcc")
+    # Do nothing for HP-UX
   else()
     set_target_properties(sysinfo PROPERTIES
       LINK_FLAGS "-static-libgcc -static-libstdc++")
