--- a/src/shared_modules/rsync/CMakeLists.txt
+++ b/src/shared_modules/rsync/CMakeLists.txt
@@ -78,8 +78,7 @@ elseif(UNIX AND NOT APPLE)
     set_target_properties(rsync PROPERTIES
       LINK_FLAGS "-static-libstdc++")
   elseif(CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
-    set_target_properties(rsync PROPERTIES
-      LINK_FLAGS "-static-libgcc")
+    # Do nothing for HP-UX
   else()
     set_target_properties(rsync PROPERTIES
       LINK_FLAGS "-static-libgcc -static-libstdc++")
