--- a/src/syscheckd/src/db/CMakeLists.txt
+++ b/src/syscheckd/src/db/CMakeLists.txt
@@ -52,8 +52,7 @@ elseif(UNIX AND NOT APPLE)
     set_target_properties(fimdb PROPERTIES
       LINK_FLAGS "-static-libstdc++")
   elseif(CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
-    set_target_properties(fimdb PROPERTIES
-      LINK_FLAGS "-static-libgcc")
+    # Do nothing for HP-UX
   else()
     set_target_properties(fimdb PROPERTIES
       LINK_FLAGS "-static-libgcc -static-libstdc++")
